fortify scan changes